--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -1,128 +1,374 @@
 /*
 Palette: https://coolors.co/79849d-b0d8e6-f1dbed-f3b3d5-ebddc7
 #f1dbed baby pink
-#f3b3d5 cotton candy
+#f3b3d5/#ec87bd cotton candy
 #e8c3b9 taupe
 #24496d indigo dye
 #d1e1e0 light blue
-#9ba5b5 lavender
+#9ba5b5/d2bddd lavender
 /* Global styles
 ------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Martel:wght@200;300;400;600;700;800;900&display=swap');
 * {
   box-sizing: border-box;
-  overflow: auto;
+  margin: 0;
+  padding: 0;
 }
 h1 {
-  padding: 50px 0 30px 30px;
+  padding: 80px 0 30px 70px;
   font-family: "Inter";
-  font-weight: 800;
-  font-size: 140px;
-  letter-spacing: 4px;
+  font-weight: 500;
+  font-size: 100px;
+  letter-spacing: 0px;
   color:#24496d;
 }
 h2 {
-  padding: 20px;
+  padding-top: 160px;
+  padding-bottom: 60px;
   font-family: "Inter";
   font-weight: 600;
   font-size: 50px;
   letter-spacing: 3px;
-  color:#24496d;
+  text-align: center;
 }
 h3 {
   padding: 20px;
   color: #24496d;
 }
+p {
+  font-family: "Martel";
+  font-weight: 200;
+  font-size: 15px;
+  color: #24496d;
+}
 body {
+  display: block;
   font-family: "Inter";
   font-weight: 100;
-  font-size: 20px;
-  letter-spacing: 3px;
+  font-size: 16px;
+  color: #24496d;
+  letter-spacing: 1px;
   margin: 0;
   padding: 0;
   background-color: white;
+  text-align: center;
 }
-p{
+/* p{
   padding-left: 20px;
-  display:flex;
-}
+  display:flex; */
+/* } */
 header {
-  display: flex;
   position: fixed;
   background-color: #f1dbed;
+  opacity: 1;
   width: 100%;
-  height: 150px;
-  justify-content: flex-end;
+  height: 85px;
+  text-decoration: none;
+  z-index: 9999;
+  margin: 0;
+  padding: 0;
 }
-header a {
-  padding: 50px 50px 30px 30px;
+.headercontainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
+     "a b c"
+}
+#button {
+  grid-area: c;
+  margin: 25px;
+  text-align: right;
+  float: right;
+  overflow: hidden;
+}
+#name {
+  grid-area: b;
+  text-align: center;
+  overflow: hidden;
+}
+#name a {
+  font-weight: 300px;
+  letter-spacing: 1px;
+  font-family:"Martel";
+  font-weight: 300;
+  font-size: 22px;
+  text-decoration: none;
+  text-align:center;
+  color: #24496d;
+  padding-top: 25px;
+  padding-right: 20px;
+  padding-left: 15px;
+}
+#name a:hover, #button a:hover {
+  color: #ec87bd;
+  border-top: solid 1px #f3b3d5;
+  border-bottom: solid 1px #f3b3d5;
+}
+.headercontainer a {
   letter-spacing: 1px;
   font-family:"Martel";
   font-weight: 200;
+  font-size: 16px;
   text-decoration: none;
   color: #24496d;
+  display: inline-block;
+  padding-top: 5px;
+  padding-right: 20px;
+  padding-left: 15px;
 }
-
-div {
-  display: block;
+.welcome {
+  text-align: center;
+  justify-content: center;
+  overflow: none;
+  padding-bottom: 10px;
 }
-.swatchgrid {
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-areas:
+  ". gallery .";
+  height: 100vh;
+}
+/* BOX HOVER */
+.cards{
+  grid-area: gallery;
   display: flex;
   flex-wrap: wrap;
+  background-size: cover;
+  margin: 10px;
+}
+.card {
+  width: 33.3%;
+  /* height: 400px; */
+  padding: 10px;
+}
+.card > div {
+  opacity: 0.65;
+  padding: 20px;
+  border-radius: 4px;
+  height: 370px;
+  text-align: left;
+}
+.content {
+  font-weight: 200;
+  text-align: left;
+  line-height: 2em;
+  padding: 20px;
+  display: inline-block;
 }
 
-.swatchgrid.colors li {
-  width: 20%;
-  height: 100px;
-  box-sizing: border-box;
-  margin: auto;
-  list-style:none;
+.content {
+  display:none;
 }
-.swatchgrid.textures li {
-  width: 33%;
-  box-sizing: border-box;
-  height: 200px;
-  margin: auto;
+.card > div:hover .content{
+  display: block;
+  z-index:10;
+}
+nav {
+  display: none;
+}
+
+@media screen and (max-width: 1400px) {
+  .card {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .card {
+    width: 100%;
+  }
+  header {
+    width: 100%;
+    height: 110px;
+  }
+  #button {
+    grid-area: b;
+    padding-top: 70px;
+    padding-right: 20px;
+    margin: 0;
+    text-align: center;
+    justify-content: center;
+    float: none;
+  }
+  #button a {
+    font-size: 14px;
+  }
+  #name a {
+    padding-top: 20px;
+  }
+}
+@media screen and (max-width: 900px) {
+  #button {
+    display: none;
+  }
+  nav{
+    display: block;
+  }
+  #menuToggle
+    {
+      display: block;
+      position: relative;
+      top: 50px;
+      left: 50px;
+
+      z-index: 1;
+
+      -webkit-user-select: none;
+      user-select: none;
+    }
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #24496d;
+
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: black;
 }
 
 
-.color-swatch-1 {
-  background: #f1dbed;
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+  cursor: pointer;
+
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
 }
 
-.color-swatch-2 {
-  background: #e8c3b9;
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: #f3b3d5;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
 }
 
-.color-swatch-3 {
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/*
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
   background: #24496d;
 }
 
-.color-swatch-4 {
-  background: #d1e1e0;
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-.color-swatch-5 {
-  background: #9ba5b5;
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  opacity: 0.75;
+  background: #d1e1e0;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 20px;
+  font-family: "Inter";
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
 }
 /* Moving Letters code */
-/* .ml1 {
-  font-weight: 900;
+/* Moving Letters code */
+.ml1 {
+  padding-top: 200px;
+  font-weight: 200;
   font-size: 3.5em;
+  color: #d1e1e0;
+  text-align: center;
 }
 
 .ml1 .letter {
   display: inline-block;
-  line-height: 1em;
-  color: white;
+  line-height: 1.0em;
+  overflow: hidden;
+  color: #9ba5b5;
 }
 
 .ml1 .text-wrapper {
   position: relative;
   display: inline-block;
-  padding-top: 0.1em;
-  padding-right: 0.05em;
-  padding-bottom: 0.15em;
+  padding-top: 0.25em;
 }
 
 .ml1 .line {
@@ -131,10 +377,20 @@ div {
   left: 0;
   height: 3px;
   width: 100%;
-  background-color: #fff;
+  background-color: #d1e1e0;
   transform-origin: 0 0;
-  color: white;
+  color: #9ba5b5;
 }
 
 .ml1 .line1 { top: 0; }
-.ml1 .line2 { bottom: 0; } */
+.ml1 .line2 { bottom: 0; }
+/*
+.ml2 {
+    font-weight: 900;
+    font-size: 3.5em;
+}
+
+.ml2 .letter {
+    display: inline-block;
+    line-height: 1.3em;
+} */
