--- a/portfolio/css/about.styles.css
+++ b/portfolio/css/about.styles.css
@@ -26,8 +26,9 @@ h2 {
   padding-top: 160px;
   padding-bottom: 60px;
   font-family: "Inter";
-  font-weight: 600;
-  font-size: 50px;
+  font-weight: 200;
+  font-size: 3.5em;
+  color: #d1e1e0;
   letter-spacing: 3px;
   text-align: center;
 }
@@ -94,6 +95,11 @@ header {
   grid-template-areas:
      "a b c"
 }
+#photo1 {
+  border-radius: 5px;
+  height:320px;
+  width: 300px;
+}
 #button {
   grid-area: c;
   margin: 25px;
@@ -136,8 +142,14 @@ header {
   padding-right: 20px;
   padding-left: 15px;
 }
-.welcome {
-  padding: 20px 0 20px 0;
+.welcomecontent{
+  padding: 0 260px 0 260px;
+}
+#me {
+  padding-left: 20px;
+}
+.welcomecontentmedia {
+  display: none;
 }
 .grid {
   display: grid;
@@ -248,8 +260,24 @@ nav {
     width: 50%;
   }
 }
+@media screen and (max-width: 1200px) {
+.welcomecontent{
+  padding: 0 200px 0 200px;
+}
+#photo1 {
+  height: 200px;
+  width: 200px;
 
+}
+}
 @media screen and (max-width: 1100px) {
+  .welcomecontent{
+    display: none;
+  }
+  .welcomecontentmedia{
+    display: block;
+    padding: 0 90px 0 90px;
+  }
   .card {
     width: 100%;
   }
@@ -272,21 +300,15 @@ nav {
   #name a {
     padding-top: 20px;
   }
-  .welcomecontent {
-    display: none;
-  }
   .welcome {
-    display: none;
+    display: block;
   }
 }
 @media screen and (max-width: 900px) {
+  .welcomecontent{
+    padding: 30px;
+  }
   #button {
-    display: none;
-  }
-  .welcomecontent {
-    display: none;
-  }
-  .welcome {
     display: none;
   }
   nav{
